Design cv_preview_layout.xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_small">15sp</dimen>
+    <dimen name="small_padding">20dp</dimen>
+    <dimen name="text_size_big">30dp</dimen>
+    <dimen name="text_size_medium">22dp</dimen>
+    <dimen name="text_size_bigger">35dp</dimen>
 </resources>
