--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#FFC107</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="mainColor">#3F51B5</color>
+    <color name="secondaryColor">#FFC107</color>
+    <color name="thirdColor">#FF9800</color>
+    <color name="bgColor">#323232</color>
+    <color name="white">#ffffff</color>
 </resources>
