Implement complete data insertion and AddFragment.kt

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,17 +1,272 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.add.AddFragment">
+    tools:context=".fragment.add.AddFragment"
+    >
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+
+    <EditText
+        android:id="@+id/languageOne"
+        android:layout_width="97dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:hint="Language"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintStart_toEndOf="@+id/skillOne"
+        app:layout_constraintTop_toBottomOf="@+id/educationText4" />
+
+    <EditText
+        android:id="@+id/levelOne"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Level"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintBottom_toTopOf="@+id/levelTwo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/languageTwo"
+        app:layout_constraintTop_toBottomOf="@+id/educationText4" />
+
+    <EditText
+        android:id="@+id/languageThree"
+        android:layout_width="97dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:hint="Language"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintStart_toEndOf="@+id/skillThree"
+        app:layout_constraintTop_toBottomOf="@+id/languageTwo" />
+
+    <EditText
+        android:id="@+id/levelThree"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Level"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/languageTwo"
+        app:layout_constraintTop_toBottomOf="@+id/levelTwo" />
+
+    <TextView
+        android:id="@+id/educationText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="56dp"
+        android:text="Experience:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cityNameTextField" />
+
+    <EditText
+        android:id="@+id/jobName"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:ems="10"
+        android:hint="Job name"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="@+id/educationText3"
+        app:layout_constraintTop_toBottomOf="@+id/educationText3" />
+
+    <EditText
+        android:id="@+id/companyName"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Company name"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="@+id/educationText3"
+        app:layout_constraintTop_toBottomOf="@+id/jobTo" />
+
+    <EditText
+        android:id="@+id/schoolSubject"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Subject"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText"
+        app:layout_constraintStart_toStartOf="@+id/educationText"
+        app:layout_constraintTop_toBottomOf="@+id/schoolTo" />
+
+    <EditText
+        android:id="@+id/schoolFrom"
+        android:layout_width="104dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="From"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText"
+        app:layout_constraintStart_toStartOf="@+id/educationText"
+        app:layout_constraintTop_toBottomOf="@+id/schoolName" />
+
+    <EditText
+        android:id="@+id/jobTo"
+        android:layout_width="113dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="To"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="@+id/educationText3"
+        app:layout_constraintTop_toBottomOf="@+id/jobFrom" />
+
+    <EditText
+        android:id="@+id/schoolName"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="School name"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText"
+        app:layout_constraintStart_toStartOf="@+id/educationText"
+        app:layout_constraintTop_toBottomOf="@+id/educationText" />
+
+    <EditText
+        android:id="@+id/skillOne"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Skill"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText2"
+        app:layout_constraintStart_toStartOf="@+id/educationText2"
+        app:layout_constraintTop_toBottomOf="@+id/educationText2" />
+
+    <EditText
+        android:id="@+id/languageTwo"
+        android:layout_width="97dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:hint="Language"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintStart_toEndOf="@+id/skillTwo"
+        app:layout_constraintTop_toBottomOf="@+id/languageOne" />
+
+    <EditText
+        android:id="@+id/levelTwo"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Level"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/languageTwo"
+        app:layout_constraintTop_toBottomOf="@+id/levelOne" />
+
+    <EditText
+        android:id="@+id/skillTwo"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Skill"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText2"
+        app:layout_constraintStart_toStartOf="@+id/educationText2"
+        app:layout_constraintTop_toBottomOf="@+id/skillOne" />
+
+    <EditText
+        android:id="@+id/skillThree"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Skill"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText2"
+        app:layout_constraintStart_toStartOf="@+id/educationText2"
+        app:layout_constraintTop_toBottomOf="@+id/skillTwo" />
+
+    <EditText
+        android:id="@+id/jobFrom"
+        android:layout_width="113dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="From"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="@+id/educationText3"
+        app:layout_constraintTop_toBottomOf="@+id/jobName" />
+
+    <EditText
+        android:id="@+id/schoolTo"
+        android:layout_width="104dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="To"
+        android:inputType="textPersonName"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintEnd_toEndOf="@+id/educationText"
+        app:layout_constraintStart_toStartOf="@+id/educationText"
+        app:layout_constraintTop_toBottomOf="@+id/schoolFrom" />
+
+    <TextView
+        android:id="@+id/educationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Education:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toStartOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cityNameTextField" />
+
+    <TextView
+        android:id="@+id/educationText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Skills:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="@+id/educationText"
+        app:layout_constraintStart_toStartOf="@+id/educationText"
+        app:layout_constraintTop_toBottomOf="@+id/schoolSubject" />
+
+    <TextView
+        android:id="@+id/educationText4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Languages:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="@+id/educationText3"
+        app:layout_constraintStart_toStartOf="@+id/educationText3"
+        app:layout_constraintTop_toBottomOf="@+id/companyName" />
 
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="16dp"
         android:text="ADD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +282,7 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/text_size_small"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/personalInformationText" />
 
     <EditText
         android:id="@+id/streetNameTextField"
@@ -49,24 +304,24 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/text_size_small"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/streetNumberTextField" />
 
     <EditText
         android:id="@+id/streetNumberTextField"
-        android:layout_width="0dp"
+        android:layout_width="118dp"
         android:layout_height="40dp"
         android:ems="10"
         android:hint="St. number"
         android:inputType="number"
         android:textSize="@dimen/text_size_small"
-        app:layout_constraintEnd_toStartOf="@+id/postalCodeTextField"
         app:layout_constraintStart_toEndOf="@+id/streetNameTextField"
         app:layout_constraintTop_toBottomOf="@+id/nameTextField" />
 
     <EditText
         android:id="@+id/ageTextField"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:hint="Age"
@@ -74,11 +329,11 @@
         android:textSize="@dimen/text_size_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameTextField"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/personalInformationText" />
 
     <EditText
         android:id="@+id/postalCodeTextField"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:gravity="center"
@@ -86,6 +341,43 @@
         android:inputType="number"
         android:textSize="@dimen/text_size_small"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/streetNumberTextField"
         app:layout_constraintTop_toBottomOf="@+id/ageTextField" />
 
+    <TextView
+        android:id="@+id/personalInformationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Personal information:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/personalInformationText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Motivation letter:"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skillThree" />
+
+    <EditText
+        android:id="@+id/motivationLetter"
+        android:layout_width="333dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:textSize="@dimen/text_size_small"
+        android:hint="I applied to this job because..."
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/addButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/personalInformationText2"
+        app:layout_constraintVertical_bias="0.523" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
